--- a/package.json
+++ b/package.json
@@ -6,6 +6,6 @@
         "mocha": "5.2.0"
     },
     "scripts": {
-        "test": "mocha"
+        "test": "mocha --recursive -R markdown > spec.md"
     }
 }
